# registry-backend

./: .gitattributes  .gitignore  Cargo.toml  Containerfile  api.yml  database.sql
migrations/2023-10-25-161455_create_items/: up.sql
src/: lib.rs  main.rs
src/database/: establish_connection.rs  item_queries.rs  mod.rs  models.rs  run_migrations.rs  schema.rs
src/routes/: authorize.rs  items.rs  mod.rs
src/routes/authorization/: admin_basic_auth.rs  authorization.rs  mod.rs  user_basic_auth.rs
src/routes/requests/: assigned.rs  link.rs  mod.rs
src/routes/responses/: authorize.rs  error.rs  items.rs  mod.rs
src/utilities/: basic_auth.rs  mod.rs
